--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
 	<string name="align_center">Align center</string>
 	<string name="strikethrough">Strikethrough</string>
     <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="default_error_message">Something went wrong. Please try again</string>
 </resources>
