Added Login screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
 	<string name="strikethrough">Strikethrough</string>
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="default_error_message">Something went wrong. Please try again</string>
+    <string name="use_anonymously">Use anonymously</string>
 </resources>
