--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="default_error_message">Something went wrong. Please try again</string>
     <string name="use_anonymously">Use anonymously</string>
+    <string name="all">All</string>
 </resources>
